Fix T72088: Missing header redraw when transform changes snap